delete Special font

--- a/sass/_creation-page-epitaph-media.sass
+++ b/sass/_creation-page-epitaph-media.sass
@@ -1,22 +1,22 @@
 .creation-epitaph
     &__text
-        font-family: 'Grafita Special'
+        font-family: 'Grafita'
         margin-bottom: 30px
         text-align: center
         padding: 0 50px
 .creation-bibliograph__text
-    font-family: 'Grafita Special'
+    font-family: 'Grafita'
     margin-bottom: 30px
     text-align: center
     padding: 0 40px
 .creation-media
     &__text
-        font-family: 'Grafita Special'
+        font-family: 'Grafita'
         margin-bottom: 30px
         text-align: center
         padding: 0 80px
     &__photo-text
-        font-family: 'Grafita Special'
+        font-family: 'Grafita'
         margin-bottom: 18px
         & span
             font-size: 14px
