--- a/sass/_creation-page-find.sass
+++ b/sass/_creation-page-find.sass
@@ -1,10 +1,10 @@
 .creation-find
     &__text
-        font-family: 'Grafita Special'
+        font-family: 'Grafita'
         text-align: center
         margin-bottom: 30px
     &__subtext
-        font-family: 'Grafita Special'
+        font-family: 'Grafita'
         text-align: center
         margin-bottom: 18px
     &__map-wrap
