--- a/sass/_creation-page.sass
+++ b/sass/_creation-page.sass
@@ -17,7 +17,7 @@
         margin-bottom: 15px
     &__text
         text-align: center
-        font-family: 'Grafita Special'
+        font-family: 'Grafita'
     &__btns
         display: flex
         align-items: center
