--- a/sass/_modal.sass
+++ b/sass/_modal.sass
@@ -38,7 +38,7 @@
         color: $text-color
         margin-bottom: 10px
     &__text
-        font-family: 'Grafita Special'
+        font-family: 'Grafita'
         font-size: 18px
         line-height: 130%
         color: $text-color
