--- a/sass/_page-head.sass
+++ b/sass/_page-head.sass
@@ -71,7 +71,7 @@
             transition: transform 0.1s linear
     &__thumbnail-label
         width: 100%
-        font-family: 'Grafita Special'
+        font-family: 'Grafita'
         position: absolute
         top: calc(50% - 60px)
         left: 50%
@@ -148,7 +148,7 @@
     &__text
         max-width: 875px
         margin: auto
-        font-family: 'Grafita Special'
+        font-family: 'Grafita'
         font-weight: 400
         font-size: 26px
         line-height: 1.3
