--- a/sass/_page-links.sass
+++ b/sass/_page-links.sass
@@ -31,14 +31,14 @@
         &:hover
             border-color: transparent
     &__name
-        font-family: 'Grafita Special'
+        font-family: 'Grafita'
         font-size: 20px
         line-height: 1.65
         text-align: center
         display: block
         color: #131414
     &__link
-        font-family: 'Grafita Special'
+        font-family: 'Grafita'
         font-size: 12px
         line-height: 1.2
         text-align: center
@@ -51,7 +51,7 @@
         left: 0
         right: 0
         background: $classicPrimary
-        font-family: 'Grafita Special'
+        font-family: 'Grafita'
         font-weight: 400
         font-size: 20px
         line-height: 1.65
