--- a/sass/_page-media.sass
+++ b/sass/_page-media.sass
@@ -18,7 +18,7 @@
         line-height: 2.5
         margin-bottom: 20px
     &__subtitle
-        font-family: 'Grafita Special'
+        font-family: 'Grafita'
         font-size: 20px
         line-height: 130%
         color: #131414
@@ -63,7 +63,7 @@
             height: 100%
     &__more
         cursor: pointer
-        font-family: 'Grafita Special'
+        font-family: 'Grafita'
         position: absolute
         top: 0
         bottom: 0
@@ -79,7 +79,7 @@
         line-height: 1.2
         text-align: center
         & span
-            font-family: 'Grafita Special'
+            font-family: 'Grafita'
             font-size: 84px
             display: block
             line-height: 1.0
