--- a/sass/_page-rested.sass
+++ b/sass/_page-rested.sass
@@ -41,13 +41,13 @@
             & path
                 fill: $classicSecondary
         & p
-            font-family: 'Grafita Special'
+            font-family: 'Grafita'
             font-weight: 400
             font-size: 26px
             line-height: 1.2
             color: $classicSecondary
     &__text
-        font-family: 'Grafita Special'
+        font-family: 'Grafita'
         color: $classicSecondary
         margin-bottom: 14px
     &__coords
