--- a/sass/_creation-page-refs-remembers.sass
+++ b/sass/_creation-page-refs-remembers.sass
@@ -1,6 +1,6 @@
 .creation-refs
     &__text
-        font-family: 'Grafita Special'
+        font-family: 'Grafita'
         text-align: center
         margin-bottom: 6px
         padding: 0 120px
@@ -21,7 +21,7 @@
 
 .creation-memories
     &__text
-        font-family: 'Grafita Special'
+        font-family: 'Grafita'
         text-align: center
         padding: 0 50px
     &__add-text
