--- a/sass/_page-biography.sass
+++ b/sass/_page-biography.sass
@@ -70,7 +70,7 @@
         margin: auto
         min-width: 412px
         min-height: 70px
-        font-family: 'Grafita Special'
+        font-family: 'Grafita'
         font-size: 20px
         border-radius: 20px
         transition: background-color .3s ease
