bibliography btn css edits

--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -30,7 +30,8 @@ a
     color: $text-color
 textarea
     resize: vertical
-// body
+body
+    overflow-x: hidden
 //     transition: background 0.3s linear
 
 .transition-3
