--- a/sass/_page-biography.sass
+++ b/sass/_page-biography.sass
@@ -191,6 +191,8 @@
             margin-bottom: 60px
         &__text
             font-size: 16px
+        &__btn
+            font-size: 18px
 
 @media screen and (max-width: 575px)
     .page-biography     
@@ -213,6 +215,8 @@
             line-height: 1.2
         &__btn
             min-width: 0
+            font-size: 14px
+            min-height: 56px
         &__text
             font-size: 14px
             &::first-letter
