--- a/sass/_page-head.sass
+++ b/sass/_page-head.sass
@@ -101,7 +101,7 @@
         position: relative
         opacity: 0
         transform: translateY(20px)
-        transition: opacity 1.0s 2.3s ease-in-out, transform 1.0s 2.3s ease-in-out
+        transition: opacity 1.5s 2.3s ease-in-out, transform 1.0s 2.3s ease-in-out
         &::before
             content: ""
             position: absolute
@@ -112,6 +112,9 @@
             background: $classicTextColor
             z-index: 10
             transition: top 1.5s 2.2s ease-in-out
+            // transition: all 1.0s 2.2s ease-in-out
+            border-radius: 50%
+            // transform-origin: 50% 100%
     &__surname
         padding: 0 45px
         width: fit-content
@@ -201,6 +204,7 @@
             opacity: 1
             transform: translateY(0px)
             &::before
+                // transform: scale(0)
                 top: 100%
         &__date
             opacity: 1
