--- a/style/style.css
+++ b/style/style.css
@@ -1941,10 +1941,10 @@ input[type="radio"]:checked::after {
   opacity: 0;
   -webkit-transform: translateY(20px);
           transform: translateY(20px);
-  -webkit-transition: opacity 1.0s 2.3s ease-in-out, -webkit-transform 1.0s 2.3s ease-in-out;
-  transition: opacity 1.0s 2.3s ease-in-out, -webkit-transform 1.0s 2.3s ease-in-out;
-  transition: opacity 1.0s 2.3s ease-in-out, transform 1.0s 2.3s ease-in-out;
-  transition: opacity 1.0s 2.3s ease-in-out, transform 1.0s 2.3s ease-in-out, -webkit-transform 1.0s 2.3s ease-in-out;
+  -webkit-transition: opacity 1.5s 2.3s ease-in-out, -webkit-transform 1.0s 2.3s ease-in-out;
+  transition: opacity 1.5s 2.3s ease-in-out, -webkit-transform 1.0s 2.3s ease-in-out;
+  transition: opacity 1.5s 2.3s ease-in-out, transform 1.0s 2.3s ease-in-out;
+  transition: opacity 1.5s 2.3s ease-in-out, transform 1.0s 2.3s ease-in-out, -webkit-transform 1.0s 2.3s ease-in-out;
 }
 
 .page-head__name::before {
@@ -1958,6 +1958,7 @@ input[type="radio"]:checked::after {
   z-index: 10;
   -webkit-transition: top 1.5s 2.2s ease-in-out;
   transition: top 1.5s 2.2s ease-in-out;
+  border-radius: 50%;
 }
 
 .page-head__surname {
