--- a/sass/_page-biography.sass
+++ b/sass/_page-biography.sass
@@ -8,10 +8,10 @@
         position: relative
         margin-bottom: 65px
         opacity: 0
-        transform: translateY(100px)
-        transition: transform 1.5s ease-in-out, opacity 2s ease-in-out
+        // transform: translateY(100px)
+        transition: transform 1.5s ease-in-out, opacity 1s 0.5s ease-in-out
         &.anim-active
-            transform: translateY(0px)
+            // transform: translateY(0px)
             opacity: 1
     &__title
         font-family: 'Calvino Grande'
