--- a/sass/_page-biography.sass
+++ b/sass/_page-biography.sass
@@ -181,6 +181,10 @@
     .page-biography
         &__text
             font-size: 22px
+@media screen and (max-width: 800px)
+    .page-biography  
+        &__controls
+            padding-right: 40px
 @media screen and (max-width: 767px)
     .page-biography
         padding: 100px 0
@@ -193,7 +197,10 @@
             font-size: 16px
         &__btn
             font-size: 18px
-
+@media screen and (max-width: 600px)
+    .page-biography  
+        &__controls
+            padding-right: 20px
 @media screen and (max-width: 575px)
     .page-biography     
         &__hero
