--- a/style/style.css
+++ b/style/style.css
@@ -2565,6 +2565,12 @@ input[type="radio"]:checked::after {
   }
 }
 
+@media screen and (max-width: 800px) {
+  .page-biography__controls {
+    padding-right: 40px;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .page-biography {
     padding: 100px 0;
@@ -2581,6 +2587,12 @@ input[type="radio"]:checked::after {
   }
   .page-biography__btn {
     font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .page-biography__controls {
+    padding-right: 20px;
   }
 }
 
